<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/zero"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="166dp"
        android:onClick="zero"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/equal"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:onClick="equal"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/five"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginBottom="123dp"
        android:onClick="five"
        android:text="@string/five"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clear1"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginBottom="40dp"
        android:onClick="clear"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/one"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginBottom="167dp"
        android:onClick="one"
        android:text="@string/one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nine"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginBottom="80dp"
        android:onClick="nine"
        android:text="@string/nine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/four"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="123dp"
        android:onClick="four"
        android:text="@string/four"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/eight"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="80dp"
        android:onClick="eight"
        android:text="@string/eight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/three"
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:layout_marginStart="321dp"
        android:layout_marginBottom="165dp"
        android:onClick="three"
        android:text="@string/three"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/divide"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="321dp"
        android:layout_marginBottom="79dp"
        android:onClick="divide"
        android:text="@string/divide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/seven"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="321dp"
        android:layout_marginBottom="122dp"
        android:onClick="seven"
        android:text="@string/seven"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ans"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="321dp"
        android:onClick="ans"
        android:text="@string/ans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="321dp"
        android:layout_marginBottom="39dp"
        android:onClick="subtract"
        android:text="@string/subtract"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/six"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="217dp"
        android:layout_marginBottom="123dp"
        android:onClick="six"
        android:text="@string/six"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="217dp"
        android:layout_marginBottom="80dp"
        android:onClick="multiply"
        android:text="@string/multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/two"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="217dp"
        android:layout_marginBottom="167dp"
        android:onClick="two"
        android:text="@string/two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/plus"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="217dp"
        android:layout_marginBottom="40dp"
        android:onClick="plus"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="217dp"
        android:onClick="back"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dot"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:onClick="dot"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="264dp"
        android:text="@string/result"
        android:textColor="#E8D5D5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/result" />

    <TextView
        android:id="@+id/result"
        android:layout_width="186dp"
        android:layout_height="32dp"
        android:layout_marginStart="52dp"
        android:text="@string/resultview"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="351dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="224dp"
        android:text="@string/text"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>